--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -6,6 +6,10 @@ security:
             id: Pimcore\Security\User\UserProvider
 
     firewalls:
+        dev:
+            pattern: ^/(css|images|js)/
+            security: false
+            
         # Pimcore WebDAV HTTP basic // DO NOT CHANGE!
         pimcore_webdav:
             pattern: ^/asset/webdav
