--- a/config/services.yaml
+++ b/config/services.yaml
@@ -1,6 +1,18 @@
 parameters:
     secret: DETzaWisgJOBN+SK87M1o8laf6d+8ZT3sA+Asjm+TNE=
 
+    # These are default values for connecting to the database/Redis cache that the Docker build sometimes requires to be set.
+    # Once the app is actually running, they will be replaced with actual values.
+    env(DATABASE_HOST): ''
+    env(DATABASE_PORT): 0
+    env(DATABASE_NAME): ''
+    env(DATABASE_USER): ''
+    env(DATABASE_PASSWORD): ''
+    env(DATABASE_SERVER_VERSION): '10.11.7-MariaDB-1:10.11.7+maria~ubu2204'
+    env(REDIS_DB): "0"
+    env(REDIS_SESSION_DB): "0"
+    env(REDIS_HOST): 'redis://redis'
+
     # customize the full path to external executables
     # normally they are auto-detected by `which program` or auto-discovered in the configured path in
     # System Settings -> General -> Additional $PATH variable
