--- a/config/services.yaml
+++ b/config/services.yaml
@@ -8,7 +8,7 @@ parameters:
     env(DATABASE_NAME): ''
     env(DATABASE_USER): ''
     env(DATABASE_PASSWORD): ''
-    env(DATABASE_SERVER_VERSION): '10.11.7-MariaDB-1:10.11.7+maria~ubu2204'
+    env(DATABASE_SERVER_VERSION): '0.0.0'
     env(REDIS_DB): "0"
     env(REDIS_SESSION_DB): "0"
     env(REDIS_HOST): 'redis://redis'
