Update extensions.json to suggest inelephense and editorconfig as installed extensions, and set intelephense as the default php formatter. Also remove default terminals

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -5,6 +5,8 @@
     "xdebug.php-debug",
     "bmewburn.vscode-intelephense-client",
     "ethansk.restore-terminals",
-    "ms-azuretools.vscode-bicep"
+    "ms-azuretools.vscode-bicep",
+    "esbenp.prettier-vscode",
+    "editorconfig.editorconfig"
   ]
 }
