--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,19 +1,6 @@
 {
-  "restoreTerminals.terminals": [
-    {
-      "splitTerminals": [
-        {
-          "name": "Spin up docker containers",
-          "commands": ["docker-compose up"]
-        },
-        {
-          "name": "Start bash in Pimcore container",
-          "commands": [
-            "sleep 10", // wait for container to start
-            "docker compose exec -it --user www-data php bash"
-          ]
-        }
-      ]
-    }
-  ]
+  "[php]": {
+    "editor.defaultFormatter": "bmewburn.vscode-intelephense-client"
+  },
+  "intelephense.format.braces": "per"
 }
