Sidebar Env Indicator (#10)
* Add / setup event, add js to inject env indicator in sidebar

* Change to use just app_env variable and to upper.

* Remove ?

* Update public/admin/js/sidebar-environment-indicator.js

Co-authored-by: cameronfromtorq <105230931+cameronfromtorq@users.noreply.github.com>

---------

Co-authored-by: cameronfromtorq <105230931+cameronfromtorq@users.noreply.github.com>

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -86,3 +86,16 @@ services:
     # App\EventListener\TestListener:
     #     tags:
     #         - { name: kernel.event_listener, event: pimcore.dataobject.preUpdate, method: onObjectPreUpdate }
+
+    App\EventListener\AdminFileLoaderEventListener:
+        tags:
+            - {
+                  name: kernel.event_listener,
+                  event: pimcore.bundle_manager.paths.js,
+                  method: addJSFiles,
+              }
+            - {
+                  name: kernel.event_listener,
+                  event: pimcore.bundle_manager.paths.css,
+                  method: addCSSFiles,
+              }
