--- a/.docker/supervisord/supervisord.conf
+++ b/.docker/supervisord/supervisord.conf
@@ -18,7 +18,7 @@ redirect_stderr=true
 
 [program:maintenance]
 user=www-data
-command=bash -c 'sleep 3600 && exec php /var/www/html/bin/console pimcore:maintenance'
+command=bash -c 'php /var/www/html/bin/console pimcore:maintenance && sleep 3600'
 autostart=true
 autorestart=true
 stdout_logfile=/dev/fd/1
