--- a/config/config.yaml
+++ b/config/config.yaml
@@ -101,9 +101,10 @@ pimcore:
 
 #### SYMFONY OVERRIDES
 framework:
+    router:
+        default_uri: "%env(DEFAULT_DOMAIN_NAME)%"
     profiler:
         enabled: false
-
     trusted_proxies: "127.0.0.1,REMOTE_ADDR"
     trusted_headers:
         [
