Add cache-buster rewrite for protected assets option #2

--- a/.docker/php/nginx.conf
+++ b/.docker/php/nginx.conf
@@ -49,6 +49,8 @@ server {
     #
     # rewrite ^(/protected/.*) /index.php$is_args$args last;
     #
+    # rewrite ^(/cache-buster-(?:\d+)/protected(?:.*)) /index.php$is_args$args last;
+    #
     # location ~ ^/var/.*/protected(.*) {
     #   return 403;
     # }
