--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     "pimcore/quill-bundle": "*",
     "symfony/amqp-messenger": "^6.2 || ^7.2",
     "symfony/dotenv": "^6.2 || ^7.2",
-    "symfony/runtime": "^6.2"
+    "symfony/runtime": "^6.2 || ^7.3"
   },
   "require-dev": {
     "codeception/codeception": "^5.0.3",
