--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -16,7 +16,7 @@ security:
 
         # Pimcore Admin Bundle firewall
         pimcore_admin: '%pimcore_admin_bundle.firewall_settings%'
-        pimcore_studio: "%pimcore_studio_backend.firewall_settings%"
+        pimcore_studio: '%pimcore_studio_backend.firewall_settings%'
 
     access_control:
         # Pimcore admin ACl  // DO NOT CHANGE!
