--- a/composer.json
+++ b/composer.json
@@ -13,10 +13,12 @@
   "prefer-stable": true,
   "require": {
     "pimcore/pimcore": "*",
-    "pimcore/platform-version": "^2024.3",
+    "pimcore/platform-version": "^2024.4",
     "pimcore/admin-ui-classic-bundle": "*",
+    "pimcore/quill-bundle": "*",
     "symfony/dotenv": "^6.4.12",
     "symfony/runtime": "^6.4.12",
+    "symfony/amqp-messenger": "^6.2",
     "torqit/pimcore-folder-creator-bundle": "^3.0",
     "torqit/pimcore-role-creator-bundle": "^3.1",
     "coreshop/messenger-bundle": "^4.0",
