--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "pimcore/skeleton",
   "type": "project",
-  "license": "GPL-3.0-or-later",
+  "license": "proprietary",
   "config": {
     "optimize-autoloader": true,
     "sort-packages": true,
@@ -11,14 +11,16 @@
     }
   },
   "prefer-stable": true,
+  "minimum-stability": "dev",
   "require": {
-    "pimcore/pimcore": "*",
-    "pimcore/platform-version": "^2024.4",
+    "php": "~8.3.0 || ~8.4.0",
+    "pimcore/pimcore": "^12.0",
+    "pimcore/platform-version": "^2025.3",
     "pimcore/admin-ui-classic-bundle": "*",
     "pimcore/quill-bundle": "*",
-    "symfony/dotenv": "^6.4.12",
-    "symfony/runtime": "^6.4.12",
-    "symfony/amqp-messenger": "^6.2",
+    "symfony/dotenv": "^6.4.12 || ^7.2",
+    "symfony/runtime": "^6.4.12 || ^7.3",
+    "symfony/amqp-messenger": "^6.2 || ^7.2",
     "torqit/pimcore-folder-creator-bundle": "^3.0",
     "torqit/pimcore-role-creator-bundle": "^3.1",
     "coreshop/messenger-bundle": "^4.0",
