--- a/composer.json
+++ b/composer.json
@@ -21,10 +21,10 @@
     "symfony/dotenv": "^6.4.12 || ^7.2",
     "symfony/runtime": "^6.4.12 || ^7.3",
     "symfony/amqp-messenger": "^6.2 || ^7.2",
-    "torqit/pimcore-folder-creator-bundle": "^3.0",
-    "torqit/pimcore-role-creator-bundle": "^3.1",
-    "coreshop/messenger-bundle": "^4.0",
-    "torqit/pimcore-object-layout-grid-bundle": "^1.2",
+    "torqit/pimcore-folder-creator-bundle": ">=4.0.1 <5.0",
+    "torqit/pimcore-role-creator-bundle": "^5.0",
+    "coreshop/messenger-bundle": "^5.0",
+    "torqit/pimcore-object-layout-grid-bundle": ">=2.0.1 <3.0",
     "basilicom/pimcore-path-formatter-bundle": "^3.0"
   },
   "require-dev": {
