Ignore local installation files

--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,7 @@ supervisord.log
 # .secrets
 /.secrets/*
 !/.secrets/.gitkeep
+
+# Pimcore installation files
+/config/local/product_registration.yaml
+/var/config/needs-install.lock
