Use reusable-php-cs-fixer@fix-failed-workflow

--- a/.github/workflows/new-php-cs-fixer.yaml
+++ b/.github/workflows/new-php-cs-fixer.yaml
@@ -1,11 +1,7 @@
 name: "PHP-CS-Fixer"
 
 on:
-  pull_request:
-    branches:
-      - "[0-9]+.[0-9]+"
-      - "[0-9]+.x"
-      - "feature-*"
+  workflow_dispatch:
   push:
     branches:
       - "[0-9]+.[0-9]+"
@@ -17,10 +13,11 @@ permissions:
   contents: write
 
 jobs:
-  php-cs-fixer:
-    uses: pimcore/workflows-collection-public/.github/workflows/reusable-php-cs-fixer.yaml@main
+  php-style:
+    uses: pimcore/workflows-collection-public/.github/workflows/reusable-php-cs-fixer.yaml@fix-failed-workflow
     with:
       head_ref: ${{ github.head_ref || github.ref_name }}
       repository: ${{ github.repository }}
+      config_file: ".php-cs-fixer.dist.php"
     secrets:
       PHP_CS_FIXER_GITHUB_TOKEN: ${{ secrets.PHP_CS_FIXER_GITHUB_TOKEN }}
