--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
   "require": {
     "php": "~8.3.0 || ~8.4.0",
     "pimcore/pimcore": "^12.3",
-    "pimcore/platform-version": "^2025.x",
+    "pimcore/platform-version": "2025.x-dev",
     "pimcore/admin-ui-classic-bundle": "*",
     "pimcore/quill-bundle": "*",
     "symfony/amqp-messenger": "^6.2 || ^7.2",
