add a local testing enviroment for sending / recieving emails (#26)

--- a/.env
+++ b/.env
@@ -34,6 +34,8 @@ DATABASE_NAME=pimcore
 DATABASE_USER=pimcore
 DATABASE_PASSWORD=pimcore
 DATABASE_SERVER_VERSION=10.11.7-MariaDB-1:10.11.7+maria~ubu2204
+SMTP_PORT_EXTERNAL=5400
+SMTP_DOMAIN=${APP_NAME}-smtp
 PIMCORE_INSTALL=true
 PIMCORE_INSTALL_MYSQL_HOST_SOCKET=${DATABASE_HOST}
 PIMCORE_INSTALL_MYSQL_PORT=${DATABASE_PORT}
