--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,18 +1,13 @@
-name: Ensure Docker images build on PRs
+name: CI
 
 on:
-  pull_request:
-    types: [opened, reopened, synchronize]
-
-concurrency: 
-  group: pr-docker-builds__${{ github.sha }}
-  cancel-in-progress: true
+  push:
 
 jobs:
-  build-images:
+  ci:
     name: Build Docker images
-    uses: TorqIT/pimcore-github-actions-workflows/.github/workflows/docker-builds.yml@v7
-    permissions: 
+    uses: TorqIT/pimcore-github-actions-workflows/.github/workflows/ci-docker.yml@v7
+    permissions:
       contents: read
       actions: read
     secrets:
@@ -22,4 +17,3 @@ jobs:
           "pimcore-instance-identifier": "${{ secrets.PIMCORE_INSTANCE_IDENTIFIER }}",
           "pimcore-encryption-secret": "${{ secrets.PIMCORE_ENCRYPTION_SECRET }}"
         }
-      
