Add datahub / importer, with default configs. (#44)

--- a/.docker/supervisord/supervisord.conf
+++ b/.docker/supervisord/supervisord.conf
@@ -48,3 +48,15 @@ autorestart=true
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 redirect_stderr=true
+
+[program:messenger-consume-data-import]
+user=www-data
+command=php /var/www/html/bin/console messenger:consume pimcore_data_import --memory-limit=128M --time-limit=360 --limit=128
+numprocs=1 # To increase worker count for parallel processes, update the following in the config.yaml: pimcore_data_importer.messenger_queue_processing.worker_count_parallel
+startsecs=0
+autostart=true
+autorestart=true
+process_name=%(program_name)s_%(process_num)02d
+stdout_logfile=/dev/fd/1
+stdout_logfile_maxbytes=0
+redirect_stderr=true
