--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,8 @@
     "pimcore/admin-ui-classic-bundle": "*",
     "pimcore/quill-bundle": "*",
     "pimcore/perspective-editor": "*",
+    "pimcore/data-hub": "*",
+    "pimcore/data-importer": "*",
     "symfony/dotenv": "^6.4.12 || ^7.2",
     "symfony/runtime": "^6.4.12 || ^7.3",
     "symfony/amqp-messenger": "^6.2 || ^7.2",
