--- a/config/packages/dev/config.yaml
+++ b/config/packages/dev/config.yaml
@@ -1,6 +1,12 @@
 imports:
     - { resource: ../../config.yaml }
 
+pimcore_data_hub:
+    config_location:
+        data_hub:
+            write_target:
+                type: "symfony-config"
+
 framework:
     mailer:
         transports:
