--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,8 @@
   "minimum-stability": "dev",
   "require": {
     "php": "~8.3.0 || ~8.4.0",
-    "pimcore/pimcore": "^12.3",
-    "pimcore/platform-version": "2025.x-dev",
+    "pimcore/pimcore": "*",
+    "pimcore/platform-version": "2025.4",
     "pimcore/admin-ui-classic-bundle": "*",
     "pimcore/quill-bundle": "*",
     "pimcore/perspective-editor": "*",
