Custom env var values for MLS

--- a/.env
+++ b/.env
@@ -25,16 +25,16 @@ PIMCORE_DEV_MODE=false
 # TODO added this to get rid of deprecation warnings when running bin/console commands, but is it correct?
 SYMFONY_DOTENV_VARS=APP_ENV,APP_DEBUG
 
-APP_NAME=torq-pimcore-skeleton
-WEB_PORT_EXTERNAL=8400
+APP_NAME=mls
+WEB_PORT_EXTERNAL=8415
 DATABASE_HOST=db
 DATABASE_PORT=3306
-DATABASE_PORT_EXTERNAL=3400
+DATABASE_PORT_EXTERNAL=3415
 DATABASE_NAME=pimcore
 DATABASE_USER=pimcore
 DATABASE_PASSWORD=pimcore
 DATABASE_SERVER_VERSION=10.11.7-MariaDB-1:10.11.7+maria~ubu2204
-SMTP_PORT_EXTERNAL=5400
+SMTP_PORT_EXTERNAL=5415
 SMTP_DOMAIN=${APP_NAME}-smtp
 PIMCORE_INSTALL=true
 PIMCORE_INSTALL_MYSQL_HOST_SOCKET=${DATABASE_HOST}
