--- a/composer.json
+++ b/composer.json
@@ -49,7 +49,7 @@
     "psr-4": {
       "App\\": "src/",
       "Pimcore\\Model\\DataObject\\": "var/classes/DataObject",
-      "Pimcore\\Bundle\\EcommerceFrameworkBundle\\Model\\": "bridge/Model"
+      "Pimcore\\Bundle\\EcommerceFrameworkBundle\\": "bridge/ecommerce-framework-bundle"
     }
   },
   "autoload-dev": {
