--- a/composer.json
+++ b/composer.json
@@ -49,8 +49,7 @@
     "psr-4": {
       "App\\": "src/",
       "Pimcore\\Model\\DataObject\\": "var/classes/DataObject",
-      "Pimcore\\Bundle\\EcommerceFrameworkBundle\\": "bridge/ecommerce-framework-bundle",
-      "CustomerManagementFrameworkBundle\\": "bridge/customer-management-framework-bundle"
+      "Pimcore\\Bundle\\EcommerceFrameworkBundle\\": "bridge/ecommerce-framework-bundle"
     }
   },
   "autoload-dev": {
