--- a/composer.json
+++ b/composer.json
@@ -48,8 +48,7 @@
   "autoload": {
     "psr-4": {
       "App\\": "src/",
-      "Pimcore\\Model\\DataObject\\": "var/classes/DataObject",
-      "Pimcore\\Bundle\\EcommerceFrameworkBundle\\": "bridge/ecommerce-framework-bundle"
+      "Pimcore\\Model\\DataObject\\": "var/classes/DataObject"
     }
   },
   "autoload-dev": {
