Try GitHub App checkout

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,11 +10,15 @@ concurrency:
 
 jobs:
   CI:
-    uses: TorqIT/pimcore-github-actions-workflows/.github/workflows/ci-docker.yml@v7
+    uses: TorqIT/pimcore-github-actions-workflows/.github/workflows/ci-docker.yml@github-app-checkout
     permissions:
       contents: read
       actions: read
+    with:
+      CHECKOUT_WITH_GITHUB_APP: true
     secrets:
+      GITHUB_APP_ID: ${{ secrets.GH_APP_ID }}
+      GITHUB_APP_PRIVATE_KEY: ${{ secrets.GH_APP_PRIVATE_KEY }}
       BUILD_TIME_SECRETS: >
         {
           "pimcore-product-key": "${{ secrets.PIMCORE_PRODUCT_KEY }}",
