--- a/.env
+++ b/.env
@@ -53,6 +53,4 @@ REDIS_HOST=redis
 REDIS_DB=12
 REDIS_SESSION_DB=14
 DEFAULT_DOMAIN_NAME=http://localhost/
-
-
-
+UX_MAP_DSN=google://%env(resolve:GOOGLE_MAPS_API_KEY)%@default
