--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -10,3 +10,7 @@ mcsupply_ecommerce:
 
 customer-logout:
     path: '/customer/logout'
+
+ux_live_component:
+    resource: '@LiveComponentBundle/config/routes.php'
+    prefix: /_components
