--- a/config/ecommerce/providers.yaml
+++ b/config/ecommerce/providers.yaml
@@ -8,7 +8,7 @@ services:
         resource: '../../src/Provider'
 
     McSupply\EcommerceBundle\Provider\PurchasableProviderInterface:
-        '@App\Provider\PurchasableProvider'
+        '@McSupply\EcommerceBundle\Provider\PurchasableProvider'
 
     McSupply\EcommerceBundle\Provider\CustomerProviderInterface:
         '@App\Provider\CustomerProvider'
