--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,8 @@
   },
   "require-dev": {
     "codeception/codeception": "^5.0.3",
-    "codeception/module-symfony": "^3.1.0"
+    "codeception/module-symfony": "^3.1.0",
+    "phpstan/phpstan-symfony": "^2.0.8"
   },
   "suggest": {
     "pimcore/data-hub": "Universal data interface for GraphQL, CSV and other formats"
