--- a/config/ecommerce/providers.yaml
+++ b/config/ecommerce/providers.yaml
@@ -7,8 +7,8 @@ services:
     App\Provider\:
         resource: '../../src/Provider'
 
-    McSupply\EcommerceBundle\Provider\PurchasableProviderInterface:
-        '@McSupply\EcommerceBundle\Provider\PurchasableProvider'
+#    McSupply\EcommerceBundle\Provider\PurchasableProviderInterface:
+#        '@McSupply\EcommerceBundle\Provider\PurchasableProvider'
 
     McSupply\EcommerceBundle\Provider\CustomerProviderInterface:
         '@App\Provider\CustomerProvider'
@@ -25,8 +25,8 @@ services:
     McSupply\EcommerceBundle\Provider\ProductTypeProviderInterface:
         '@App\Provider\ProductTypeProvider'
 
-    McSupply\EcommerceBundle\Provider\ProductProviderInterface:
-        '@App\Provider\ProductProvider'
+#    McSupply\EcommerceBundle\Provider\ProductProviderInterface:
+#      '@App\Provider\ProductDataProvider'
 
     McSupply\EcommerceBundle\Provider\ShipMethodProviderInterface:
         '@App\Provider\ShipMethodProvider'
