Feature/continue checkout implementation (#5)
* Migrate providers to a more flexible resolver model

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -64,21 +64,14 @@ services:
     App\OptionProvider\:
         resource: '../src/OptionProvider'
 
+    App\Provider\:
+        resource: '../src/Provider'
+
     App\EventListener\:
         resource: '../src/EventListener'
 
-    App\EventListener\AdminFileLoaderEventListener:
-        tags:
-            - {
-                name: kernel.event_listener,
-                event: pimcore.bundle_manager.paths.js,
-                method: addJSFiles,
-            }
-            - {
-                name: kernel.event_listener,
-                event: pimcore.bundle_manager.paths.css,
-                method: addCSSFiles,
-            }
+    App\LinkGenerator\ProductLinkGenerator:
+        public: true
 
     App\ExpressionLanguage\BasicExpressionProvider:
         tags:
